Base bot setup (#2)
* Firing up the Discord bot

* Listening for messages

* Filtering to only valid commands

* Added general command handler

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "license": "ISC",
   "devDependencies": {
     "dotenv": "^8.2.0"
+  },
+  "dependencies": {
+    "discord.js": "^12.4.1"
   }
 }
